tests/paczka1/small_fuzzy/12183124.err
Error in line 1: tSyYxR S602 87,9
Error in line 13: S602 A486 42,3
